feat: add full list of Tripo 3D style options with backend and frontend support - Added all official Tripo 3D model styles (e.g., cartoon, steampunk, barbie, etc.) - Updated HTML <select> with complete list of style options - Backend (server.js) and frontend (main.js) updated to pass selected style to Tripo API - Default fallback behavior handled when no style is selected

--- a/morph3d/index.html
+++ b/morph3d/index.html
@@ -18,10 +18,11 @@
 
       <label for="styleSelect">Stijl:</label>
       <select id="styleSelect">
-        <option value="realistisch">Realistisch</option>
-        <option value="lowpoly">Low Poly</option>
-        <option value="cartoon">Cartoon</option>
-      </select>
+  <option value="realistic">Realistisch</option>
+  <option value="low_poly">Low Poly</option>
+  <option value="stylized">Cartoon</option>
+</select>
+
 
       <button id="generateBtn">Genereer</button>
 
