--- a/morph3d/index.html
+++ b/morph3d/index.html
@@ -5,6 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Morph3D – Text to 3D</title>
     <link rel="stylesheet" href="/src/style.css" />
+    <style>
+      .viewer-container {
+        display: flex;
+        gap: 20px;
+        margin-top: 20px;
+        flex-wrap: wrap;
+        align-items: flex-start;
+      }
+
+      .viewer-box {
+        flex: 1 1 100%;
+        min-width: 300px;
+        height: 400px;
+        background: #111;
+        border-radius: 10px;
+        overflow: hidden;
+      }
+
+      #downloadBtn {
+        margin-top: 10px;
+      }
+
+      #enhanceBtn {
+        margin-top: 10px;
+        background-color: #00ffc3;
+        color: #000;
+        border: none;
+        padding: 10px 16px;
+        border-radius: 6px;
+        font-weight: bold;
+        cursor: pointer;
+      }
+
+      #enhanceBtn:hover {
+        background-color: #00ddb1;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
@@ -18,13 +55,15 @@
 
       <label for="styleSelect">Stijl:</label>
       <select id="styleSelect">
-  <option value="realistic">Realistisch</option>
-  <option value="low_poly">Low Poly</option>
-  <option value="stylized">Cartoon</option>
-</select>
+        <option value="realistic">Realistisch</option>
+        <option value="low_poly">Low Poly</option>
+        <option value="stylized">Cartoon</option>
+      </select>
 
+      <!-- ✅ Prompt Enhancer -->
+      <button id="enhanceBtn">✨ Verbeter prompt</button>
 
-      <button id="generateBtn">Genereer</button>
+      <button id="generateBtn" style="margin-top: 10px;">Genereer</button>
 
       <!-- ✅ Live voortgangsbalk -->
       <div id="progressBarWrapper" style="display: none; margin: 20px 0;">
@@ -37,7 +76,10 @@
         <p id="finalPrompt"></p>
       </div>
 
-      <div id="viewer" style="width: 100%; height: 400px; margin-top: 20px;"></div>
+      <div class="viewer-container">
+        <div id="viewer" class="viewer-box"></div>
+      </div>
+
       <button id="downloadBtn" style="display: none;">Download dit model</button>
     </div>
 
