Improve UI: auto-growing textarea, dynamic component visibility, and cleaner generation flow

--- a/morph3d/index.html
+++ b/morph3d/index.html
@@ -20,7 +20,9 @@
         id="promptInput"
         placeholder="E.g. 'A magical sword with glowing blue crystals'"
       ></textarea>
-
+<button id="enhanceBtn" class="rgb-glow">
+  <span class="star">✨</span> Enhance Prompt
+</button>
       <label for="styleSelect">Style:</label>
       <select id="styleSelect">
         <option value="">Default (no style)</option>
@@ -34,7 +36,8 @@
         <option value="ancient_bronze">🛡️ Ancient Bronze</option>
       </select>
 
-      <button id="enhanceBtn">✨ Enhance Prompt</button>
+  
+
       <button id="generateBtn">Generate</button>
 
       <!-- Progress Bar (verborgen) -->
