Add neon loading spinner and progress bar glow for improved loading UI

--- a/morph3d/index.html
+++ b/morph3d/index.html
@@ -41,10 +41,12 @@
       <button id="generateBtn">Generate</button>
 
       <!-- Progress Bar (verborgen) -->
-      <div id="progressBarWrapper" class="hidden">
-        <div id="progressText">⏳ Please wait...</div>
-        <progress id="progressBar" max="100" value="0"></progress>
-      </div>
+  <div id="progressBarWrapper" class="hidden">
+  <div class="neon-spinner"></div>
+  <div id="progressText">⏳ Please wait...</div>
+  <progress id="progressBar" max="100" value="0"></progress>
+</div>
+
 
       <!-- Output (verborgen) -->
       <div id="output" class="hidden">
